--- a/examples/mpich/images/Dockerfile
+++ b/examples/mpich/images/Dockerfile
@@ -1,4 +1,5 @@
 FROM       ubuntu:14.04
+MAINTAINER Reza Farrahi <imriss@ieee.org>
 MAINTAINER Jaewoo Lee <continuse@icloud.com>
 
 RUN apt-get update
