--- a/examples/mpich/images/Dockerfile
+++ b/examples/mpich/images/Dockerfile
@@ -15,7 +15,7 @@ RUN sed -ri 's/UsePAM yes/#UsePAM yes/g' /etc/ssh/sshd_config
 RUN ssh-keygen -b 2048 -t rsa -f /root/.ssh/id_rsa -q -N ""
 RUN cd /root/.ssh && cp id_rsa.pub authorized_keys
 
-RUN apt-get install -y python-pip gfortran
+RUN apt-get install -y python-pip gfortran git 
 
 # ETCD for python
 RUN cd /tmp && git clone https://github.com/jplana/python-etcd && cd python-etcd && \
