--- a/examples/mpich/images/archlinux/build
+++ b/examples/mpich/images/archlinux/build
@@ -1,1 +1,2 @@
+sudo cp ../entrypoint.sh ../pod_ip.py ../known_hosts.py ../auto_ssh.sh ../bash_profile .
 sudo docker build --tag imriss/mpich_archlinux:v3 .
