--- a/examples/mpich/images/archlinux/Dockerfile
+++ b/examples/mpich/images/archlinux/Dockerfile
@@ -29,7 +29,7 @@ RUN chmod u+x /usr/sbin/aur.sh
 RUN chmod u+x /usr/sbin/add-aur
 RUN add-aur docker
 
-RUN su docker -c 'pacaur -S --needed --noprogressbar --noedit --noconfirm gcc-fortran expect inetutils r'
+RUN su docker -c 'pacaur -S --needed --noprogressbar --noedit --noconfirm gcc-fortran expect inetutils r dnsutils'
 
 # ETCD for python
 RUN cd /tmp \
