--- a/examples/mpich/images/Dockerfile
+++ b/examples/mpich/images/Dockerfile
@@ -36,9 +36,13 @@ RUN cd /tmp && wget http://www.mpich.org/static/downloads/3.3a2/mpich-3.3a2.tar.
 # R Install
 RUN cd /tmp && wget https://cran.r-project.org/src/base/R-3/R-3.4.0.tar.gz && \
     tar xvfz R-3.4.0.tar.gz && cd R-3.4.0 && ./configure --enable-R-shlib && \
-    make && make install
+    make && make install && \
+    R --vanilla <<EOF && \
+    install.packages('snow') && \
+    install.packages('Rmpi', configure.args = c('--with-Rmpi-type=MPICH2')) && \
+    install.packages('doMPI') && \
+    q() && EOF 
     
-
 RUN apt-get install -y expect telnet curl strace nano dnsutils 
 
 RUN ulimit -n 1000 && \
