--- a/examples/mpich/images/Dockerfile
+++ b/examples/mpich/images/Dockerfile
@@ -38,9 +38,9 @@ RUN cd /tmp && wget https://cran.r-project.org/src/base/R-3/R-3.4.0.tar.gz && \
     tar xvfz R-3.4.0.tar.gz && cd R-3.4.0 && ./configure --enable-R-shlib && \
     make && make install && \
     R --vanilla <<EOF && \
-    install.packages('snow') && \
-    install.packages('Rmpi', configure.args = c('--with-Rmpi-type=MPICH2')) && \
-    install.packages('doMPI') && \
+    install.packages("snow") && \
+    install.packages("Rmpi", configure.args = c("--with-Rmpi-type=MPICH2")) && \
+    install.packages("doMPI") && \
     q() && EOF 
     
 RUN apt-get install -y expect telnet curl strace nano dnsutils 
