--- a/examples/mpich/images/Dockerfile
+++ b/examples/mpich/images/Dockerfile
@@ -38,7 +38,7 @@ RUN cd /tmp && wget https://cran.r-project.org/src/base/R-3/R-3.4.0.tar.gz && \
     tar xvfz R-3.4.0.tar.gz && cd R-3.4.0 && ./configure --enable-R-shlib && \
     make && make install 
     
-RUN Rscript -e "install.packages('snow', repos='http://cran.us.r-project.org') && \
+RUN Rscript -e "install.packages('snow', repos='http://cran.us.r-project.org')" && \
     Rscript -e "install.packages('Rmpi', configure.args = c('--with-Rmpi-type=MPICH2'),repos='http://cran.us.r-project.org')" && \
     Rscript -e "install.packages('doMPI', repos='http://cran.us.r-project.org')" 
    
